<resources>
    <string name="app_name">Journey</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="trip">Trip</string>
    <string name="travelagency">TravelAgency</string>
    <string name="packets">Packets</string>
    <string name="customers">Customers</string>
    <string name="search">Search</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_duration">Enter Duration</string>
    <string name="enter_type">Enter Type</string>
    <string name="enter_coordinates">Enter Coordinates</string>
    <string name="give_start_date">Give Start Date</string>
    <string name="give_price">Give Price</string>
    <string name="give_package">Give Package</string>
    <string name="give_hotel">Give Hotel</string>
    <string name="give_name">Give Name</string>
    <string name="trip_management">TRIP MANAGEMENT</string>
    <string name="insert">INSERT</string>
    <string name="clear">CLEAR</string>
    <string name="enter_days">Enter Days</string>

</resources>