<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showin="Navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_trip"
            android:icon="@drawable/ic_trip"
            android:title="@string/trip" />
        <item
            android:id="@+id/nav_travelagency"
            android:icon="@drawable/ic_travelagency"
            android:title="@string/travelagency" />
        <item
            android:id="@+id/nav_packets"
            android:icon="@drawable/ic_packets"
            android:title="@string/packets" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_customers"
            android:title="@string/customers" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
    </group>

    <!--<item android:title="Online">-->
    <!--    <menu>-->

    <!--    </menu>-->
    <!--</item>-->
</menu>